Modifiquei conteudo de h1 do arquivo index.html

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -8,6 +8,6 @@
 </head>
 
 <body>
-    <h1>aiai que tristeza git é tantas manhas..</h1>    
+    <h1>GIT É GOSTOSO DEMAIS</h1>    
 </body>
 </html>
